--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,22 @@
 body
 {
-    color: blue;
+    color: black;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    margin: 0;
+    padding: 0;
 }
+ #Container
+ {
+     width: 70%;
+     padding: 1em;
+     text-align: center;
+     border: 1px solid #ddd;
+     margin: 0 auto;
+ }
+
+ #Container h1
+ {
+     font-size: 40px;
+ }
