--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,11 +2,33 @@ body
 {
     color: black;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Segoe UI';
     font-size: 14px;
     margin: 0;
     padding: 0;
 }
+
+#cabecera
+{
+    background: blue;
+    font-family: 'Segoe UI';
+    box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.15);
+    text-align: left;
+    font-size: 20px;
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.1em;
+
+}
+
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 1em;
+}
+
  #Container
  {
      width: 70%;
