--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
     color: black;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Courier;
     font-size: 14px;
     margin: 0;
     padding: 0;
